--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,34 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    //link(rel='stylesheet', href='/stylesheets/style.css')
+
+    script(type='text/javascript', src='/js/jquery-2.0.3.min.js')
+
+    link(rel='stylesheet', href='/css/bootstrap-3.0.2/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/bootstrap-3.0.2/css/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/css/style.css')
+
+    script(type='text/javascript', src='/css/bootstrap-3.0.2/js/bootstrap.min.js')
+    //script(type='text/javascript', src='/js/blog.js')
+    //script(type='text/javascript', src='/js/admin.js')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
   body
-    block content
+    #wrap
+      .container
+        h1.page-header= appTitle
+        p.lead Velkomin!
+
+        block page
+        block header
+          div
+            include includes/menu
+        block alert
+          div.alert.alert-warning-hidden
+        .content
+          block content
+    block footer
+      footer
+        .container
+          p
+            | Copyright &copy; 2015 Verið Velkomin hf.
