--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,8 +17,9 @@ html
   body
     #wrap
       .container
-        h1.page-header= appTitle
-        p.lead Velkomin!
+        p.toppur
+          img(src='/images/logo/logo-sm.gif')
+          | velkomin
 
         block page
         block header
