--- a/views/includes/menu.jade
+++ b/views/includes/menu.jade
@@ -2,6 +2,15 @@
   ul.nav.nav-pills
     li(class=(menu === 'index')?'active':'')
       a(href='/') Heim
+
+    if(loggedin)
+      li
+        a(href="/users/logout") Útskrá
+    else
+      li(class=(menu === 'login')?'active':'')
+        a(href='/users/login') Innskráning
+
+  //
     if (admin || menu ==='admin' || menu==='post')
       li
         a(href="/logout") Log out
