--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,6 +25,9 @@ html
         block header
           div
             include includes/menu
+          div
+            if(loggedin)
+              p Halló #{username} 
         block alert
           div.alert.alert-warning-hidden
         .content
