strúktúr breyting, server hluti

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -4,10 +4,9 @@ block page
 block content
   div.intro-area
     div.uppercase Svo mikið að gera
-    p svo lítill tími
+    p svo lítill tími !
     form( action='/search', type='POST')
       input.form-control(name='search', type='text', placeholder='Hvað langar þig að gera í dag?')
 
 
     img(src='/images/SilfraRiftIceland.jpg')
-  
